adding support for optional value input for statistics, Lars-B/TreeStat2#1